2013-05-11  Per Bothner  <per@bothner.com>

	* PrintConsumer.java (write): If range is empty, write empty String.
	Thus delimiter actions done for any string get done.
	(append): Don't use loop - use above version of write instead.

2013-03-04  Per Bothner  <per@bothner.com>

	* Strings.java (printQuoted): Generalize to Appendable.

2013-02-14  Per Bothner  <per@bothner.com>

	* Pair.java: Use getCar()/getCdr() instead of accessinging car/cdr
	fields directly - which may not work for for subclasses.
	* ImmutablePair.java (<init>): Call super constructor.

2012-11-29  Per Bothner  <per@bothner.com>

	* U8Vector.java (toUtf): Add (start,length) parameters.
	* ByteVector.java (copyFrom): New method.

	* FVector.java (copyFrom): New method.

2012-11-28  Per Bothner  <per@bothner.com>

	* ByteVector.java (getBuffer): Change return type to public,
	to support open-input-bytevector.

2012-11-27  Per Bothner  <per@bothner.com>

	* U8Vector.java: New constructor.
	(writeTo): Move to super-class.
	* ByteVector.java (writeTo): New method, moved from U8Vector.
	(copyFrom, readFrom): New methods.

2012-11-22  Per Bothner  <per@bothner.com>

	* U8Vector.java (writeTo): New method.

2012-11-20  Per Bothner  <per@bothner.com>

	* FString.java (<init>): Add constructor taking StringBuilder,
	in addition to ones taking StringBuffer.

	* FVector.java (setAll):  Rename to ...
	(fill): and add optional range parameters.

	* SimpleVector.java: Also implement RandomAccess.

2012-06-08  Per Bothner  <per@bothner.com>

	* LList.java (toString): Use getCar/getCdr instead of car/cdr.

2012-01-19  Per Bothner  <per@bothner.com>

	* LList.java (listRef): Remove method - reimplemented in Scheme.

2011-12-19  Per Bothner  <per@bothner.com>

	* U8Vector.java (<init>): Add copy constructors.
	(toUtf8): New method.

2011-07-11  Per Bothner  <per@bothner.com>

	* ConstVector.java (<init>): New default constructor.
	(setDataBackDoor): New method used by LispReader.